# QuantEvoLoop

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: config.e2e.yaml  config.example.yaml  sample_strategy.py
paper/: main.tex
scripts/: generate_docs.py
src/quantevoloop/: __init__.py  cli.py  config.py
src/quantevoloop/agents/: __init__.py  judge_agent.py  lead_agent.py  sub_agent.py
src/quantevoloop/backends/: __init__.py  base.py  claude_code.py  codex.py  qoder_cli.py
src/quantevoloop/channels/: __init__.py  bot_commands.py  discord_adapter.py  notifier.py  telegram_adapter.py  webhook_adapter.py
src/quantevoloop/dashboard/: __init__.py
src/quantevoloop/engine/: __init__.py  backtrader_engine.py  base.py  freqtrade_engine.py  mock_engine.py  zipline_engine.py
src/quantevoloop/evaluation/: __init__.py  diagnostics.py  holdout.py  robustness.py  scorer.py  significance.py  walkforward.py
src/quantevoloop/evolution/: __init__.py  campaign.py  dead_ends.py  knowledge.py  promoter.py  state.py
src/quantevoloop/gateway/: __init__.py  coordinator.py  event_bus.py  lane_queue.py
src/quantevoloop/selection/: __init__.py  population.py  reward.py  tournament.py  ucb.py
src/quantevoloop/templates/: diagnose.j2  judge.j2  mutation.j2
src/quantevoloop/workspace/: __init__.py
tests/: conftest.py  test_bot_commands.py  test_e2e_coordinator.py  test_evaluation.py  test_evolution.py
