[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantevoloop"
version = "0.1.0"
description = "Multi-Agent Evolutionary Loop for Quantitative Trading Strategy Optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "QuantEvoLoop Contributors"},
]
keywords = [
    "quantitative-trading",
    "strategy-optimization",
    "evolutionary-algorithm",
    "multi-agent",
    "freqtrade",
    "ai-agent",
    "claude-code",
    "codex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
im = ["python-telegram-bot>=21.0", "discord.py>=2.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
all = [
    "quantevoloop[im,dev]",
]

[project.scripts]
quantevoloop = "quantevoloop.cli:main"

[project.urls]
Homepage = "https://github.com/quantevoloop/quantevoloop"
Documentation = "https://quantevoloop.readthedocs.io"
Repository = "https://github.com/quantevoloop/quantevoloop"
Issues = "https://github.com/quantevoloop/quantevoloop/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
